initial cleaning in triviaGame
cleaned up the TriviaGame a bit. trying to clean the add method