@@ -2,27 +2,37 @@ package workshop;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
+
+//
+//class Player{
+//    private final String name;
+//
+//    public Player(String name) {
+//        this.name = name;
+//    }
+//}
 
 public class TriviaGame {
-    ArrayList players = new ArrayList();
+    ArrayList<String> playerNames = new ArrayList<>();
     int[] places = new int[6];
     int[] purses = new int[6];
     boolean[] inPenaltyBox = new boolean[6];
 
-    LinkedList popQuestions = new LinkedList();
-    LinkedList scienceQuestions = new LinkedList();
-    LinkedList sportsQuestions = new LinkedList();
-    LinkedList rockQuestions = new LinkedList();
+    List<String> popQuestions = new LinkedList<>();
+    List<String> scienceQuestions = new LinkedList<>();
+    List<String> sportsQuestions = new LinkedList<>();
+    List<String> rockQuestions = new LinkedList<>();
 
     int currentPlayer = 0;
     boolean isGettingOutOfPenaltyBox;
 
     public TriviaGame() {
         for (int i = 0; i < 50; i++) {
-            popQuestions.addLast("Pop Question " + i);
-            scienceQuestions.addLast(("Science Question " + i));
-            sportsQuestions.addLast(("Sports Question " + i));
-            rockQuestions.addLast(createRockQuestion(i));
+            popQuestions.add("Pop Question " + i);
+            scienceQuestions.add(("Science Question " + i));
+            sportsQuestions.add(("Sports Question " + i));
+            rockQuestions.add(createRockQuestion(i));
         }
     }
 
@@ -30,46 +40,36 @@ public class TriviaGame {
         return "Rock Question " + index;
     }
 
-    public boolean isPlayable() {
-        return (howManyPlayers() >= 2);
-    }
-
     public boolean add(String playerName) {
-
-
-        players.add(playerName);
-        places[howManyPlayers()] = 0;
-        purses[howManyPlayers()] = 0;
-        inPenaltyBox[howManyPlayers()] = false;
+        playerNames.add(playerName);
+        places[playerNames.size()] = 0;
+        purses[playerNames.size()] = 0;
+        inPenaltyBox[playerNames.size()] = false;
 
         announce(playerName + " was added");
-        announce("They are player number " + players.size());
+        announce("They are player number " + playerNames.size());
         return true;
     }
 
-    public int howManyPlayers() {
-        return players.size();
-    }
-
     public void roll(int roll) {
-        announce(players.get(currentPlayer) + " is the current player");
+        announce(playerNames.get(currentPlayer) + " is the current player");
         announce("They have rolled a " + roll);
 
         if (inPenaltyBox[currentPlayer]) {
             if (roll % 2 != 0) {
                 isGettingOutOfPenaltyBox = true;
 
-                announce(players.get(currentPlayer) + " is getting out of the penalty box");
+                announce(playerNames.get(currentPlayer) + " is getting out of the penalty box");
                 places[currentPlayer] = places[currentPlayer] + roll;
                 if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
 
-                announce(players.get(currentPlayer)
+                announce(playerNames.get(currentPlayer)
                         + "'s new location is "
                         + places[currentPlayer]);
                 announce("The category is " + currentCategory());
-                askQuestion();
+                announce(nextQuestion());
             } else {
-                announce(players.get(currentPlayer) + " is not getting out of the penalty box");
+                announce(playerNames.get(currentPlayer) + " is not getting out of the penalty box");
                 isGettingOutOfPenaltyBox = false;
             }
 
@@ -78,24 +78,28 @@ public class TriviaGame {
             places[currentPlayer] = places[currentPlayer] + roll;
             if (places[currentPlayer] > 11) places[currentPlayer] = places[currentPlayer] - 12;
 
-            announce(players.get(currentPlayer)
+            announce(playerNames.get(currentPlayer)
                     + "'s new location is "
                     + places[currentPlayer]);
             announce("The category is " + currentCategory());
-            askQuestion();
+            announce(nextQuestion());
         }
 
     }
 
-    private void askQuestion() {
-        if (currentCategory() == "Pop")
-            announce(popQuestions.removeFirst());
-        if (currentCategory() == "Science")
-            announce(scienceQuestions.removeFirst());
-        if (currentCategory() == "Sports")
-            announce(sportsQuestions.removeFirst());
-        if (currentCategory() == "Rock")
-            announce(rockQuestions.removeFirst());
+    private String nextQuestion() {
+        switch (currentCategory()) {
+            case "Pop":
+                return popQuestions.remove(0);
+            case "Science":
+                return scienceQuestions.remove(0);
+            case "Sports":
+                return sportsQuestions.remove(0);
+            case "Rock":
+                return rockQuestions.remove(0);
+            default:
+                throw new IllegalStateException("Unexpected value: " + currentCategory());
+        }
     }
 
 
@@ -117,19 +121,19 @@ public class TriviaGame {
             if (isGettingOutOfPenaltyBox) {
                 announce("Answer was correct!!!!");
                 purses[currentPlayer]++;
-                announce(players.get(currentPlayer)
+                announce(playerNames.get(currentPlayer)
                         + " now has "
                         + purses[currentPlayer]
                         + " Gold Coins.");
 
                 boolean winner = didPlayerWin();
                 currentPlayer++;
-                if (currentPlayer == players.size()) currentPlayer = 0;
+                if (currentPlayer == playerNames.size()) currentPlayer = 0;
 
                 return winner;
             } else {
                 currentPlayer++;
-                if (currentPlayer == players.size()) currentPlayer = 0;
+                if (currentPlayer == playerNames.size()) currentPlayer = 0;
                 return true;
             }
 
@@ -138,14 +142,14 @@ public class TriviaGame {
 
             announce("Answer was correct!!!!");
             purses[currentPlayer]++;
-            announce(players.get(currentPlayer)
+            announce(playerNames.get(currentPlayer)
                     + " now has "
                     + purses[currentPlayer]
                     + " Gold Coins.");
 
             boolean winner = didPlayerWin();
             currentPlayer++;
-            if (currentPlayer == players.size()) currentPlayer = 0;
+            if (currentPlayer == playerNames.size()) currentPlayer = 0;
 
             return winner;
         }
@@ -153,11 +157,11 @@ public class TriviaGame {
 
     public boolean wrongAnswer() {
         announce("Question was incorrectly answered");
-        announce(players.get(currentPlayer) + " was sent to the penalty box");
+        announce(playerNames.get(currentPlayer) + " was sent to the penalty box");
         inPenaltyBox[currentPlayer] = true;
 
         currentPlayer++;
-        if (currentPlayer == players.size()) currentPlayer = 0;
+        if (currentPlayer == playerNames.size()) currentPlayer = 0;
         return true;
     }
 
